NetBSD Problem Report #46571

From www@NetBSD.org  Sat Jun  9 21:16:36 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id F299C63B89C
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  9 Jun 2012 21:16:35 +0000 (UTC)
Message-Id: <20120609211635.3C82B63B882@www.NetBSD.org>
Date: Sat,  9 Jun 2012 21:16:35 +0000 (UTC)
From: naruse@airemix.com
Reply-To: naruse@airemix.com
To: gnats-bugs@NetBSD.org
Subject: execinfo.h should include stddef.h
X-Send-Pr-Version: www-1.0

>Number:         46571
>Category:       lib
>Synopsis:       execinfo.h should include stddef.h
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    christos
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jun 09 21:20:00 +0000 2012
>Closed-Date:    Sun Jun 10 15:20:04 +0000 2012
>Last-Modified:  Sun Jun 10 15:20:04 +0000 2012
>Originator:     Yui NARUSE
>Release:        6.99.7
>Organization:
>Environment:
NetBSD nbsd.rubyci.org 6.99.7 NetBSD 6.99.7 (GENERIC) #1: Sat Jun  9 19:35:02 JST 2012  naruse@nbsd.rubyci.org:/usr/obj/sys/arch/i386/compile/GENERIC i386
>Description:
lib/libexecinfo/execinfo.h uses size_t but doesn't include a header which defines size_t.
It should include stddef.h
>How-To-Repeat:

>Fix:
Index: lib/libexecinfo/execinfo.h
===================================================================
RCS file: /cvsroot/src/lib/libexecinfo/execinfo.h,v
retrieving revision 1.1
diff -u -r1.1 execinfo.h
--- lib/libexecinfo/execinfo.h  26 May 2012 22:02:29 -0000      1.1
+++ lib/libexecinfo/execinfo.h  9 Jun 2012 21:15:13 -0000
@@ -31,6 +31,8 @@
 #ifndef _EXECINFO_H_
 #define _EXECINFO_H_

+#include <stddef.h>
+
 __BEGIN_DECLS
 size_t backtrace(void **, size_t);
 char **backtrace_symbols(void *const *, size_t);

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46571 CVS commit: src/lib/libexecinfo
Date: Sat, 9 Jun 2012 17:22:18 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sat Jun  9 21:22:17 UTC 2012

 Modified Files:
 	src/lib/libexecinfo: execinfo.h

 Log Message:
 PR/46571: Yui NARUSE: execinfo.h should include stddef.h


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/lib/libexecinfo/execinfo.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: lib-bug-people->christos
Responsible-Changed-By: wiz@NetBSD.org
Responsible-Changed-When: Sun, 10 Jun 2012 15:20:04 +0000
Responsible-Changed-Why:
christos fixed it.


State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 10 Jun 2012 15:20:04 +0000
State-Changed-Why:
fixed, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.