PR/46571: Yui NARUSE: execinfo.h should include stddef.h