lib/libexecinfo/execinfo.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: execinfo.h,v 1.1 2012/05/26 22:02:29 christos Exp $	*/
+/*	$NetBSD: execinfo.h,v 1.2 2012/06/09 21:22:17 christos Exp $	*/
 
 /*-
  * Copyright (c) 2012 The NetBSD Foundation, Inc.
@@ -30,6 +30,8 @@
  */
 #ifndef _EXECINFO_H_
 #define _EXECINFO_H_
+
+#include <stddef.h>
 
 __BEGIN_DECLS
 size_t backtrace(void **, size_t);
